--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 06 10:25:18 EST 2023
-sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
+#Fri Nov 10 09:39:19 EST 2023
+sdk.dir=C\:\\Users\\19088\\AppData\\Local\\Android\\Sdk
