--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -127,9 +127,9 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.zebra.android.devdemo.sendfile.SendFileDemo"
+            android:name="com.zebra.android.devdemo.storedformat.DisplayFieldsActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:label="Send File Demo"
+            android:label="Display Fields"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
