--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -207,6 +207,12 @@
             android:label="Receipt Demo"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name="com.zebra.android.devdemo.ChangePIN.ChangePIN"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="Change PIN"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         </application>
 
 </manifest>
