--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 08 09:42:27 EST 2023
-sdk.dir=C\:\\Users\\19088\\AppData\\Local\\Android\\Sdk
+#Mon Dec 18 14:35:46 EST 2023
+sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
