--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name" 
         android:allowBackup="false">
+
         <activity
             android:name="com.zebra.android.devdemo.LoadDevDemo"
             android:label="@string/app_name"
@@ -219,6 +220,15 @@
             android:label="Change PIN"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name="com.zebra.android.devdemo.storedformat.CustomScannerActivity"
+            android:label="@string/app_name"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         </application>
 
 </manifest>
