--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -227,6 +227,12 @@
             android:windowSoftInputMode="adjustPan"
             tools:ignore="Instantiatable" />
         <activity
+            android:name="com.zebra.android.devdemo.sendfile.SendFileDemo"
+            android:label="From Phone"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            tools:ignore="Instantiatable" />
+        <activity
             android:name="com.zebra.android.devdemo.storedformat.CustomScannerActivity"
             android:label="@string/app_name"
             android:exported="true">
