--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 05 10:04:26 EDT 2024
-sdk.dir=/Users/craigmcinerney/Library/Android/sdk
+#Tue Apr 09 14:19:49 EDT 2024
+sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
